// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LocationDisplay > matches snapshot with full location 1`] = `
<div>
  <p
    class="text-gray-500 mt-2"
    data-testid="location-display"
  >
    Manhattan, New York, USA
  </p>
</div>
`;

exports[`LocationDisplay > matches snapshot with partial location 1`] = `
<div>
  <p
    class="text-gray-500 mt-2"
    data-testid="location-display"
  >
    Ontario, Canada
  </p>
</div>
`;
